# routes/api.php
@@ -6,14 +6,16 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\TelegramController;
 use App\Http\Middleware\NotificationMiddleware;
 
-Route::post('/auth/register', [\App\Http\Controllers\Api\AuthController::class, 'register']);
+Route::post('/v1/auth/register', [\App\Http\Controllers\Api\AuthController::class, 'register']);
 
-Route::post('/auth/login', [\App\Http\Controllers\Api\AuthController::class, 'login']);
+Route::post('/v1/auth/login', [\App\Http\Controllers\Api\AuthController::class, 'login']);
 
 
 Route::middleware('auth:sanctum')->group(function () {
-    Route::post('/auth/logout', [\App\Http\Controllers\Api\AuthController::class, 'logout']);
+    Route::post('/v1/auth/logout', [\App\Http\Controllers\Api\AuthController::class, 'logout']);
 });
 
-Route::get('/users', [\App\Http\Controllers\Api\AuthController::class, 'getUsers'])->middleware('auth:sanctum');
-Route::apiResource('/posts', App\Http\Controllers\Api\PostController::class)->middleware('auth:sanctum');
+Route::get('/v1/users', [\App\Http\Controllers\Api\AuthController::class, 'getUsers'])->middleware('auth:sanctum');
+Route::apiResource('/v1/posts', App\Http\Controllers\Api\PostController::class)->middleware('auth:sanctum');
+
+
